--- a/exampleSite/.gitignore
+++ b/exampleSite/.gitignore
@@ -6,6 +6,7 @@
 # Folders
 _obj
 _test
+_gen
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -25,3 +26,4 @@ _testmain.go
 /public
 /themes
 .DS_Store
+
