--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "chunky-poster",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
-  "license": "MIT",
-  "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "watch": "webpack --watch --progress --colors --config webpack.dev.js"
-  },
-  "dependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "assets-webpack-plugin": "^3.9.10",
-    "babel-loader": "^8.0.6",
-    "bootstrap": "^4.4.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "ekko-lightbox": "^5.3.0",
-    "jquery": "^3.4.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "popper.js": "^1.16.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "vanilla-lazyload": "^12.4.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.8.3"
-  }
+    "name": "slender-poster",
+    "version": "1.0.0",
+    "main": "webpack.config.js",
+    "license": "MIT",
+    "scripts": {
+        "build": "webpack --config webpack.prod.js",
+        "watch": "webpack --watch --progress --colors --config webpack.dev.js"
+    },
+    "dependencies": {
+        "@babel/core": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
+        "@babel/runtime": "^7.8.4",
+        "@fortawesome/fontawesome-free": "^5.12.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.26",
+        "@fortawesome/free-brands-svg-icons": "^5.12.0",
+        "@fortawesome/free-solid-svg-icons": "^5.12.0",
+        "assets-webpack-plugin": "^3.9.10",
+        "babel-loader": "^8.0.6",
+        "bootstrap": "^4.4.1",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.4.2",
+        "ekko-lightbox": "^5.3.0",
+        "jquery": "^3.4.1",
+        "mini-css-extract-plugin": "^0.9.0",
+        "node-sass": "^4.13.1",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "popper.js": "^1.16.1",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.7.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "vanilla-lazyload": "^12.4.0",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10",
+        "webpack-merge": "^4.2.2"
+    },
+    "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.8.3"
+    }
 }
