--- a/theme.toml
+++ b/theme.toml
@@ -1,18 +1,18 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Chunky Poster"
+name = "Slender Poster"
 license = "MIT"
-licenselink = "https://github.com/puresyntax71/hugo-theme-chunky-poster/blob/master/LICENSE"
-description = "A simple, bootstrap 4 based blog theme."
-homepage = "https://github.com/puresyntax71/hugo-theme-chunky-poster"
+licenselink = "https://github.com/obviateio/hugo-slender-poster/blob/master/LICENSE"
+description = "A different take on Chunky Poster, a bootstrap 4 based blog theme."
+homepage = "https://github.com/obviateio/hugo-slender-poster/"
 tags = ["minimal", "minimalist", "blog", "responsive", "syntax highlighting", "multilingual", "minimalist", "light"]
-features = ["minimal", "minimalist", "blog", "responsive", "syntax highlighting", "multilingual", "minimalist", "light"]
+features = ["minimal", "minimalist", "blog", "responsive", "syntax highlighting", "multilingual", "minimalist", "light", "pagination"]
 min_version = "0.41"
 
 [author]
-  name = "virtualcursor"
-  homepage = "https://strict-panda.com"
+  name = "Jon Davis"
+  homepage = "https://obviate.io"
 
 # If porting an existing theme
 [original]
