Change authors to singular everywhere, fix author article list. Touch up example site to match

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -26,7 +26,7 @@ theme = "hugo-slender-poster"
 category = "categories"
 tag = "tags"
 series = "series"
-author = "authors"
+author = "author"
 
 [params]
   author = "Hugo Authors"
